tests/snapshots/examples_fixtures/diagnostics__ModuleGraph__ModuleGraphCycleA.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics/ModuleGraph/ModuleGraphCycleA.flx
== compile ==
failed (module)
== diagnostics ==
error[E024]: Module Path Mismatch

Module name `ModuleGraph.ModuleGraphCycleA` doesn't match file path `examples/diagnostics/ModuleGraph/ModuleGraphCycleA.flx`.

  examples/diagnostics/ModuleGraph/ModuleGraphCycleA.flx:7:1
  |
7 | module ModuleGraph.ModuleGraphCycleA {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
